--- a/Models/SpeechLM/2025.01.10_MARS6.md
+++ b/Models/SpeechLM/2025.01.10_MARS6.md
@@ -394,7 +394,10 @@ This gives better prosody and speaker transfer from the reference, at the cost o
 
 ## 4·Experiments: 实验
 
-### Evaluation Data & Baselines
+### Evaluation Data & Baselines: 评估数据和基线
+
+<details>
+<summary>展开原文</summary>
 
 Many evaluation benchmarks do not capture the diversity of in-the-wild speech.
 We therefore construct a new evaluation set on the emotive [EARS dataset [9]](../../Datasets/2024.06.10_EARS.md).
@@ -406,28 +409,77 @@ Ignoring the non-verbal, free-form and 'slow' utterances, we select half of the 
 We compare the 70M-parameter ***MARS6*** against three strong baseline models, all much larger: [XTTSv2 [1]](2024.06.07_XTTS.md) (460M parameters), [StyleTTS2 [3]](2023.06.13_StyleTTS2.md) (148M parameters), and [MetaVoice-1B [27] [URL]](https://github.com/metavoiceio/metavoice-src) (1.2B parameters).
 We use the best available checkpoints and the best inference settings from each paper.
 
-### MARS6 Implementation
+</details>
+<br>
 
-#### Model
+许多评估基准没有捕获真实语音的多样性.
+因此, 我们在 [EARS 数据集 [9]](../../Datasets/2024.06.10_EARS.md) 上构造了一个新的评估集.
+它包含来自 107 位英语说话人在无回声环境下录制的情感语音, 不同的阅读风格, 自由形式对话式语音, 非语言的声音.
+我们选择其中 43 位说话人作为测试集, 64 位作为验证集.
+忽略非语言, 自由形式和 '慢' 语音, 我们从每个风格中选择一半的样本 (音频和文本), 并将每个样本与同一说话人和风格的另一份样本配对, 以作为声学克隆参考.
+***MARS6*** 和 3 个强基线模型 (XTTSv2, StyleTTS2, MetaVoice-1B) 都没有见过 EARS 的任何部分.
+
+我们将 70M 参数的 ***MARS6*** 与 3 个大得多强基线模型 (XTTSv2, StyleTTS2, MetaVoice-1B) 进行比较.
+- [XTTSv2 [1]](2024.06.07_XTTS.md) (460M 参数),
+- [StyleTTS2 [3]](2023.06.13_StyleTTS2.md) (148M 参数),
+- [MetaVoice-1B [27] [URL]](https://github.com/metavoiceio/metavoice-src) (1.2B 参数).
+
+我们选择最佳的可用检查点和每个论文中最佳的推理设置.
+
+### MARS6 Implementation: ***MARS6*** 实现
+
+#### Model: 模型
+
+<details>
+<summary>展开原文</summary>
 
 We use standard 8-layer, 512-dimensional transformers for the encoder and global decoder, and a 4-layer local decoder.
 For the two speaker embeddings, we use [WavLM-SV [28] [URL]](https://huggingface.co/microsoft/wavlm-base-plus-sv) and the pretrained [MS-CLAP[20]](../_Basis/CLAP.md).
 We train the BPE tokenizer to a vocabulary size of 512.
 
-#### Training
+</details>
+<br>
+
+我们使用标准的 8 层 512 维的 Transformer 作为编码器和全局解码器, 还有 4 层的局部解码器.
+对于两个说话人嵌入, 我们使用 [WavLM-SV [28] [URL]](https://huggingface.co/microsoft/wavlm-base-plus-sv) 和预训练的 [MS-CLAP[20]](../_Basis/CLAP.md).
+我们训练 BPE 分词器, 词表大小为 512.
+
+#### Training: 训练
+
+<details>
+<summary>展开原文</summary>
 
 We train ***MARS6*** for 2M steps using [AdamW [29]](../../Modules/Optimization/2017.11.14_AdamW.md) with a linearly decaying learning rate starting at $5\cdot10^{-4}$ (after a 10k step linear warmup) and ending at $2.5\cdot10^{-5}$.
 We use an AdamW $\beta$ of $(0.9,0.995)$, weight decay of $2\cdot10^{-2}$, and batch size of 96.
 
-#### Data
+</details>
+<br>
+
+我们使用 [AdamW [29]](../../Modules/Optimization/2017.11.14_AdamW.md) 训练 ***MARS6*** 2M 步, 学习率从 $5\cdot10^{-4}$ 开始, 线性衰减到 $2.5\cdot10^{-5}$.
+我们使用 AdamW 的 $\beta$ 为 $(0.9,0.995)$, 权重衰减为 $2\cdot10^{-2}$, 批大小为 96.
+
+#### Data: 数据
+
+<details>
+<summary>展开原文</summary>
 
 We train ***MARS6*** on the following publically available datasets: [LibriHeavy [30]](../../Datasets/2023.09.15_Libriheavy.md), [GLOBE [31]](../../Datasets/2024.06.21_GLOBE.md), [VCTK [23]](../../Datasets/2012.08.00_VCTK.md), [AniSpeech [32] [URL]](https://huggingface.co/datasets/ShoukanLabs/AniSpeech), and [CCv2 [33]](../../Datasets/CCv2.md).
 We limit the number of utterances from each speaker to be at most 80k.
 Together this results in a training dataset of roughly 46k hours.
 
-### Evaluation metrics
+</details>
+<br>
 
-#### Objective Evaluation
+我们在以下公开可用的数据集上训练 ***MARS6***: [LibriHeavy [30]](../../Datasets/2023.09.15_Libriheavy.md), [GLOBE [31]](../../Datasets/2024.06.21_GLOBE.md), [VCTK [23]](../../Datasets/2012.08.00_VCTK.md), [AniSpeech [32] [URL]](https://huggingface.co/datasets/ShoukanLabs/AniSpeech), 和 [CCv2 [33]](../../Datasets/CCv2.md).
+我们限制每个说话人的发言数量不超过 80k.
+共计训练数据集约为 46k 小时.
+
+### Evaluation Metrics: 评估指标
+
+#### Objective Evaluation: 客观评估
+
+<details>
+<summary>展开原文</summary>
 
 We measure intelligibility using the word/character error rate (W/CER) between the predicted outputs on our EARS test set and the ground truth audio.
 We obtain transcripts of the generated audio using the Whisper-base speech recognition model ([Whisper [26]](2022.12.06_Whisper.md)).
@@ -435,11 +487,28 @@ We objectively measure speaker cloning ability using the equal-error rate (EER) 
 The verification system produces a similarity score between pairs of utterances.
 We compute these similarities on (ground truth reference, generated) pairs and (ground truth reference, other ground truth) pairs from the same speaker.
 The former pairs are assigned a label of 0, and latter a label of 1.
-Thsese can then be used to compute an EER as in [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md).
+These can then be used to compute an EER as in [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md).
 A higher EER indicates that it is harder to distinguish generated speech from ground truth examples of the reference speaker, up to a theoretical maximum of 50\%.
 We also report an approximated mean naturalness metric using the pretrained [UTMOS [24]](../../Evaluations/2022.04.05_UTMOS.md) model predicting naturalness scores on a scale of 1-5.
 
-#### Subjective Evaluation
+</details>
+<br>
+
+我们在 EARS 测试集上使用预测输出和真实音频之间的词/字错误率 (W/CER) 来衡量语音可理解性.
+我们使用 Whisper-base 语音识别模型 ([Whisper [26]](2022.12.06_Whisper.md)) 生成音频的文本.
+
+我们使用 Equal-Error Rate (EER) 来客观地衡量说话人克隆能力, 使用了预训练的说话人验证系统 ([X-Vectors [34]](../SpeechRepresentation/X-vectors.md)).
+验证系统生成发言对的相似度分数.
+我们在 (真实参考, 生成) 对上计算相似度, 以及 (真实参考, 其他真实参考) 对上计算相似度, 并将前者的标签设置为 0, 后者的标签设置为 1.
+这些可以用来计算 EER, 如 [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md) 中所述.
+EER 越高, 表示生成语音与参考说话人的真实示例之间的区分更难, 理论上最高可达 50\%.
+
+我们还使用预训练的 [UTMOS [24]](../../Evaluations/2022.04.05_UTMOS.md) 模型, 预测语音的自然度得分, 得分范围为 1-5.
+
+#### Subjective Evaluation: 主观评估
+
+<details>
+<summary>展开原文</summary>
 
 We perform two subjective evaluations using Amazon Mechanical Turk.
 In the first, we collect a mean opinion score (MOS) on a 1-5 scale.
@@ -450,9 +519,22 @@ For SIM, each evaluated utterance (from the baselines, ***MARS6***, or actual gr
 We present the listener these samples side-by-side and ask them to rate how similar the speaker sounds on a 1-4 scale similar to [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md).
 After filtering anomalous listeners, we have 1980 SIM ratings from 40 unique listeners.
 
+</details>
+<br>
+
+我们使用 Amazon Mechanical Turk 进行两个主观评估.
+第一个评估, 我们收集 1-5 等级的平均意见分数 (MOS).
+从 EARS 测试集中, 我们选择来自基线, 真实, 和 ***MARS6*** 的 36 个发言, 并使用浅层和深层克隆.
+我们通过设陷和校准样本来过滤异常听众, 得到 1326 条来自 2340 位听众的评价.
+
+第二个评估, 我们收集 1-4 等级的说话人相似度分数 (SIM), 遵循 [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md) 的协议.
+对于 SIM, 每个被评估的发言 (来自基线, ***MARS6***, 或实际音频) 都与同一说话人的另一份随机发言配对.
+我们将这些样本呈现给听众, 要求他们对说话者的声音的相似度打分, 1-4 等级, 与 [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md) 相同.
+经过过滤异常听众, 我们得到 1980 条 SIM 评价, 来自 40 位听众.
+
 ## 5·Results: 结果
 
-### Intelligibility and Reference Similarity
+### Intelligibility and Reference Similarity: 语音可理解性和参考相似度
 
 The results on the EARS test set are given in Table~\ref{tab:1_headline_results}.
 Results are mixed: for intelligibility, StyleTTS is a clear winner.
@@ -472,7 +554,7 @@ Removing any of the individual techniques degrades intelligibility.
 Speaker similarity is also worse when removing RIO ORPO.
 This shows that each technique is important for ***MARS6***.
 
-### Effect of Reference Style and Cloning Method
+### Effect of Reference Style and Cloning Method: 参考风格和克隆方法的影响
 
 To demonstrate this effect a bit more, as well as profile the cases where ***MARS6*** is making intelligibility errors, we make use of the style labels in EARS.
 Using these labels we plot the WER metric grouped by the style of the reference utterance in \figurename~\ref{fig:2_semiblation}.
