--- a/Models/SpeechLM/2025.01.10_MARS6.md
+++ b/Models/SpeechLM/2025.01.10_MARS6.md
@@ -536,6 +536,9 @@ After filtering anomalous listeners, we have 1980 SIM ratings from 40 unique lis
 
 ### Intelligibility and Reference Similarity: 语音可理解性和参考相似度
 
+<details>
+<summary>展开原文</summary>
+
 The results on the EARS test set are given in Table~\ref{tab:1_headline_results}.
 Results are mixed: for intelligibility, StyleTTS is a clear winner.
 In terms of speaker similarity, ***MARS6*** using deep clone has the best SIM score, but in terms of EER, MetaVoice-1B is best.
@@ -554,7 +557,32 @@ Removing any of the individual techniques degrades intelligibility.
 Speaker similarity is also worse when removing RIO ORPO.
 This shows that each technique is important for ***MARS6***.
 
+</details>
+<br>
+
+在 EARS 测试集上的结果如表~\ref{tab:1_headline_results} 所示.
+结果是混合的:
+- 对于可理解性, StyleTTS 是明显的赢家.
+- 在说话人相似度方面, 使用深层克隆的 ***MARS6*** 具有最佳的 SIM 得分, 但在 EER 方面, MetaVoice-1B 表现最佳.
+- 对于自然度 (MOS 和 UTMOS), StyleTTS2 再次是最佳的.
+- 但这些结果可能有些误导性, 因为 XTTS, StyleTTS, 和 ***MARS6*** 都有比真实测试发言有更好的 W/CER 和 UTMOS 值.
+
+虽然这需要进一步调查, 但演示音频示例可以提供一些见解.
+由于 EARS 是情感性的, 自发的, 并且多样的, 它比纯粹阅读语音更难理解.
+StyleTTS2 和 XTTSv2 似乎产生的音频比参考语音更为 '减弱', 特别是对于高度情绪化的参考.
+与此同时, SLM 型模型如 MetaVoice 和 ***MARS6*** 似乎克隆了参考语音的语调更加强烈, 而导致语音理解能力下降, 这可以从更高的说话者相似度指标 (特别是深层克隆) 中看出.
+当使用低语调的参考时, 这显然会导致 StyleTTS2 和 XTTSv2 产生干净的, 但不符合参考的输出, 而 ***MARS6*** 则产生了低语调的, 但仍然难以理解的输出.
+因此, 对于高度表达的语音, 低 W/CER 数字并不一定意味着输出与参考语音一致.
+
+我们通过消除 RAS, 质量前缀 (Sec.~\ref{subsec:inference_algos}) 和 RIO ORPO 微调 (Sec.~\ref{subsec:fine-tuning}) 的最后三行, 在表~\ref{tab:1_headline_results} 中测量模型的浅层克隆性能, 以衡量其与目标指标的性能.
+移除任一技术会降低可理解性.
+消除 RIO ORPO 也会降低说话人相似度.
+这表明每个技术对于 ***MARS6*** 都至关重要.
+
 ### Effect of Reference Style and Cloning Method: 参考风格和克隆方法的影响
+
+<details>
+<summary>展开原文</summary>
 
 To demonstrate this effect a bit more, as well as profile the cases where ***MARS6*** is making intelligibility errors, we make use of the style labels in EARS.
 Using these labels we plot the WER metric grouped by the style of the reference utterance in \figurename~\ref{fig:2_semiblation}.
@@ -563,6 +591,15 @@ Most of the W/CER in Table~\ref{tab:1_headline_results} from both MetaVoice and 
 This, together with the audio samples, provides evidence for our earlier hypothesis.
 ***MARS6*** is able to produce coherent whisper outputs, however, Whisper-base cannot accurately transcribe whispers.
 This also causes the poorly-cloned outputs of XTTSv2 and StyleTTS2 to be rated much higher in terms of intelligibility.
+
+</details>
+<br>
+
+为了更好地说明这一影响, 以及对 ***MARS6*** 造成可理解性错误的案例进行分析, 我们使用 EARS 中的风格标签.
+基于这些标签, 我们在 \figurename~\ref{fig:2_semiblation} 中绘制了 WER 指标, 以按参考发言的风格分组.
+大多数风格的趋势都保持不变, 除了一种参考风格 -- 低语调.
+***MARS6*** 和 MetaVoice 在大多数情况下都产生了一致的低语调输出, 但 Whisper-base 不能准确地转录低语调.
+这也导致 XTTSv2 和 StyleTTS2 的较差克隆输出被认为可理解性更高.
 
 ## 6·Conclusions: 结论
 
