add CoDiff-VC exp

--- a/Models/Voice_Conversion/2024.11.28_CoDiff-VC.md
+++ b/Models/Voice_Conversion/2024.11.28_CoDiff-VC.md
@@ -148,8 +148,49 @@ $$
 p_{\theta}\left(x_{t-1} \mid x_{t}\right)=N\left(x_{t-1} ; \mu_{\theta}\left(x_{t},t,\text{cond}\right), \Sigma_{\theta}\left(x_{t}, t\right)\right)
 $$
 
-## 4·Experiments: 实验
+## 4·Experiments & 5·Results: 实验 & 结果
 
-## 5·Results: 结果
+### Datesets and Model Setup
+
+We conduct our experiments using the LibriTTS dataset~\cite{zen2019libritts}, which comprises 580 hours of speech from 2400 speakers.
+To standardize the data, we crop the audio samples to the same length and add silence at the end of shorter samples.
+The dataset is divided into a training set with speech data from 2390 speakers and a test set with data from the remaining 10 speakers.
+All audio samples are resampled to 24000 Hz.
+
+In our implementation, we employ a codec based on the Tortoise approach~\cite{tortoise}.
+We trained the codec model on 4 NVIDIA V100 GPUs with a batch size of 1024 for 300k training steps.
+For the conversion model, CoDiff-VC adopts a U-net structure with 30 blocks, each having a dimension of 128.
+It utilizes a linear noise schedule for $\beta_{t} \in\left[1 \times 10^{-4}, 0.02\right]$ with T = 200 in the diffusion model, following the approach in DiffWave~\cite{kong2020diffwave}.
+CoDiff-VC is trained on 4 NVIDIA V100 GPUs in the training setup with a batch size of 16 for 1M steps, using the Adam optimizer with an initial learning rate of 1e-4.
+
+### Baseline Systems
+
+We adopt YourTTS~\cite{casanova2022yourtts}, SEF-VC~\cite{li2023sef}, LM-VC~\cite{wang2023lm} and Diff-VC ~\cite{DBLP:conf/iclr/PopovVGSKW22} as the baseline systems for comparison with our proposed CoDiff-VC in the zero-shot voice conversion scenario:
+
+- \textbf{YourTTS}: A TTS model with a speaker voiceprint model to extract speaker embedding and employ HiFi-GAN vocoder to reconstruct the waveform. The speaker embedding served as a condition of the flow-based decoder and posterior encoder for enhancing the zero-shot multi-speaker generation capability.
+- \textbf{SEF-VC}: A VC framework with a semantic encoder and a mel encoder. The semantic encoder reconstructs the discrete representations extracted by Hubert into mel spectrograms as the backbone model. The mel encoder processes the mel spectrogram to obtain speaker timbre representation via a powerful position-agnostic cross-attention mechanism.
+- \textbf{LM-VC}: A two-stage language modeling approach that generates acoustic tokens to recover linguistic content and timbre and reconstructs the fine for acoustic details as converted speech.
+- \textbf{Diff-VC}: A diffusion-based VC model that employs the average voice encoder to transform mel features into a speaker-average representation in the dataset for the disentanglement problem.
+
+### Subjective Evaluation
+
+We use Mean Opinion Score (MOS) as the subjective metric to evaluate performance between the baseline and proposed systems regarding speaker similarity, naturalness, and speech quality. The test set comprises 20 utterances involving 10 unseen speakers (5 females and 5 males). Using 10 speakers as references, each of the 20 sentences serves as input, generating 200 audio samples. Ten listeners are invited to participate in the subjective evaluation, scoring the similarity between the converted and reference speech. Additionally, Naturalness MOS and Speech Quality MOS assessments are conducted to measure the intelligibility of the synthesized voice.
+
+As shown in Table~\ref{tab:mos}, the subjective evaluation results demonstrate the superior performance of our proposed approach in zero-shot voice conversion. YourTTS solely relies on global timbre representation to model speaker timbre, while SEF-VC utilizes only local timbre representation and the self-supervised model extracting semantic information exhibits residual timbre information, leading to poor timbre similarity. In addition, Diff-VC exhibits lower naturalness MOS than CoDiff-VC, suggesting that our content module extracts better content representations. Notably, these three models are constrained by a two-stage method, first reconstructing the mel and then restoring it through the vocoder, resulting in degradation of generation quality.
+Limited to coarse acoustic tokens, LM-VC faces challenges in restoring unseen speaker timbres. In contrast, CoDiff-VC modeling both coarse and fine-grained timbre, coupled with the application of dual CFG on the diffusion model, enhances the quality of converted speech while effectively capturing timbre information.
+
+### Objective Evaluation
+
+To evaluate speaker similarity, we calculate the cosine similarity between the converted speech and the reference speech using a pre-trained ECAPA-TDNN~\cite{desplanques2020ecapa}. For intelligibility evaluation, we calculate the Word Error Rate (WER) for the converted speech. The WER assessment is computed using an open-source Wenet toolkit~\cite{yao2021wenet} trained on the LibriSpeech dataset.
+
+As shown in Table~\ref{tab:mos}, the objective evaluation results align with the subjective evaluation, showing that CoDiff-VC achieved the highest cosine similarity. SEF-VC, LM-VC, and Diff-VC recorded higher WER scores than CoDiff-VC, suggesting that the discrete representation of content through timbre decoupling in Co-DiffVC facilitates more accurate modeling of content information. Meanwhile, the lower WER results indicate that our proposed CoDiff-VC's converted speech outperforms all baseline intelligibility systems.
+
+To demonstrate the effectiveness of timbre modeling, we visualize the coarse-grained timbre representations through t-SNE~\cite{Maaten2008VisualizingDU}. We select 100 audio samples from five random speakers in the test set and extract coarse-grained timbre representations for clustering using the model’s coarse-grained timbre modeling structure. The clustering results, shown in Figure~\ref{fig:tsne}, indicate that the timbre representations of each speaker are strongly related to the corresponding speakers.
+
+### Ablation Study
+
+To evaluate the effectiveness of each component in CoDiff-VC, we conduct an ablation study to analyze the impact of three key components: MSLN, multi-scale timbre modeling, and dual classifier-free guidance. We compare CoDiff-VC with three variants: first, without the MSLN module (-MSLN); second, using only coarse-grained speaker timbre instead of multi-scale ones (-fine-grained); and third, without dual classifier-free guidance (-dual cfg), utilizing only classifier-free guidance for content representation.
+
+As illustrated in Table~\ref{tab:mos}, the speaker similarity and speech naturalness are significantly degraded when removing the MSLN module. These results suggest that the MSLN module is crucial for retaining content information while eliminating residual timbre information, playing an important role in disentangling linguistic content. In terms of timbre modeling, relying solely on single-scale speaker representation results in a notable decline in speaker similarity, indicating the critical role of the multi-scale timbre modeling module in capturing the details of speaker timbre. Additionally, naturalness experiences degradation with only coarse-grained timbre modeling, highlighting the importance of timbral details in synthesizing natural speech. Furthermore, the model without dual classifier-free guidance exhibits lower speaker similarity and speech quality, emphasizing the contribution of additional regular timbre information guidance to improved timbre modeling and speech quality.
 
 ## 6·Conclusions: 结论
