add CoDiff-VC exp

--- a/Models/Voice_Conversion/2024.11.28_CoDiff-VC.md
+++ b/Models/Voice_Conversion/2024.11.28_CoDiff-VC.md
@@ -194,3 +194,5 @@ To evaluate the effectiveness of each component in CoDiff-VC, we conduct an abla
 As illustrated in Table~\ref{tab:mos}, the speaker similarity and speech naturalness are significantly degraded when removing the MSLN module. These results suggest that the MSLN module is crucial for retaining content information while eliminating residual timbre information, playing an important role in disentangling linguistic content. In terms of timbre modeling, relying solely on single-scale speaker representation results in a notable decline in speaker similarity, indicating the critical role of the multi-scale timbre modeling module in capturing the details of speaker timbre. Additionally, naturalness experiences degradation with only coarse-grained timbre modeling, highlighting the importance of timbral details in synthesizing natural speech. Furthermore, the model without dual classifier-free guidance exhibits lower speaker similarity and speech quality, emphasizing the contribution of additional regular timbre information guidance to improved timbre modeling and speech quality.
 
 ## 6·Conclusions: 结论
+
+In this paper, we propose CoDiff-VC, a codec-assisted end-to-end framework designed for zero-shot voice conversion. We employ a pre-trained codec and a pre-encoder to decouple discrete content representations from the source speech. Meanwhile, we introduce a multi-scale speaker timbre modeling module within the diffusion model for modeling fine-grained timbre details. Our proposed CoDiff-VC excels in generating converted audio for unseen target speakers with more similar voice characteristics, higher naturalness, and improved speech quality. Additionally, we present a dual classifier-free guidance method, creating implicit classifiers for content and speaker representations to enhance the inference results of the diffusion model. However, it's worth noting that the inference speed of diffusion remains relatively slow. We aim to address and improve the reverse process of diffusion in our future work.
