--- a/Models/Voice_Conversion/2024.11.28_CoDiff-VC.md
+++ b/Models/Voice_Conversion/2024.11.28_CoDiff-VC.md
@@ -58,14 +58,14 @@ While effective in controlling the overall timbre characteristics of the convert
 Conversely, other studies employ an attention mechanism to capture fine-grained speaker representation from multiple reference utterances, with Mega-TTS2~\cite{jiang2023mega} being the most prominent example, which allows for the generation of more natural speech for the target speaker.
 However, the speaker similarity in converted speech using these approaches relies on the duration of the reference, resulting in a notable degradation in similarity performance when the reference speech duration is excessively short.
 
-In this study, with particular consideration of the above two challenges, we propose CoDiff-VC, a codec-assisted end-to-end framework for zero-shot voice conversion, which can generate high-fidelity waveforms without any auxiliary losses and avoid cascading error issues.
+In this study, with particular consideration of the above two challenges, we propose ***CoDiff-VC***, a codec-assisted end-to-end framework for zero-shot voice conversion, which can generate high-fidelity waveforms without any auxiliary losses and avoid cascading error issues.
 
 We employ a pre-trained codec model, featuring only a single codebook, to extract discrete tokens from the source speech as the linguistic content.
 The single codebook architecture can partially disentangle the speaker's timbre by introducing a speaker reference encoder while retaining accurate linguistic content information.
 Meanwhile, we incorporate Mix-Style layer normalization (MSLN)~\cite{huang2022generspeech} to perturb the timbre information within the discrete tokens, facilitating a more thorough disentanglement of timbre characteristics from the tokens.
 To improve timbre similarity and consistency, we introduce a multi-scale speaker timbre modeling approach to recover voice details when reconstructing the waveform.
 Finally, we propose a dual classifier-free guidance strategy to train unconditional models of content and timbre for guiding the reverse process to generate high-quality waveforms.
-Objective and subjective experiments demonstrate that CoDiff-VC outperforms the baseline systems in both speech quality and speaker similarity.
+Objective and subjective experiments demonstrate that ***CoDiff-VC*** outperforms the baseline systems in both speech quality and speaker similarity.
 Ablation studies further demonstrate the effectiveness of each component in our proposed approach.
 
 ## 2·Related Works: 相关工作
@@ -130,7 +130,7 @@ Meanwhile, we set the guidance scale $w_{s}$ following a hardening strategy, whi
 
 We first train the speech codec and then extract quantized discrete tokens for conversion model training.
 We select audio clips of the same speaker as the reference speech to get a multi-scale timbre representation.
-Then, with the content representation and timbre representation as condition information, the proposed CoDiff-VC is optimized by minimizing the following unweighted variant of the ELBO~\cite{ho2020denoising} as shown in Eq.(3), which has proved to be effective for high-quality generation~\cite{tortoise}.
+Then, with the content representation and timbre representation as condition information, the proposed ***CoDiff-VC*** is optimized by minimizing the following unweighted variant of the ELBO~\cite{ho2020denoising} as shown in Eq.(3), which has proved to be effective for high-quality generation~\cite{tortoise}.
 
 $$
     \bar\alpha _t = \prod_{t=1}^{T}(1-\beta_{t})
@@ -159,13 +159,13 @@ All audio samples are resampled to 24000 Hz.
 
 In our implementation, we employ a codec based on the Tortoise approach~\cite{tortoise}.
 We trained the codec model on 4 NVIDIA V100 GPUs with a batch size of 1024 for 300k training steps.
-For the conversion model, CoDiff-VC adopts a U-net structure with 30 blocks, each having a dimension of 128.
+For the conversion model, ***CoDiff-VC*** adopts a U-net structure with 30 blocks, each having a dimension of 128.
 It utilizes a linear noise schedule for $\beta_{t} \in\left[1 \times 10^{-4}, 0.02\right]$ with T = 200 in the diffusion model, following the approach in DiffWave~\cite{kong2020diffwave}.
-CoDiff-VC is trained on 4 NVIDIA V100 GPUs in the training setup with a batch size of 16 for 1M steps, using the Adam optimizer with an initial learning rate of 1e-4.
+***CoDiff-VC*** is trained on 4 NVIDIA V100 GPUs in the training setup with a batch size of 16 for 1M steps, using the Adam optimizer with an initial learning rate of 1e-4.
 
 ### Baseline Systems
 
-We adopt YourTTS~\cite{casanova2022yourtts}, SEF-VC~\cite{li2023sef}, LM-VC~\cite{wang2023lm} and Diff-VC ~\cite{DBLP:conf/iclr/PopovVGSKW22} as the baseline systems for comparison with our proposed CoDiff-VC in the zero-shot voice conversion scenario:
+We adopt YourTTS~\cite{casanova2022yourtts}, SEF-VC~\cite{li2023sef}, LM-VC~\cite{wang2023lm} and Diff-VC ~\cite{DBLP:conf/iclr/PopovVGSKW22} as the baseline systems for comparison with our proposed ***CoDiff-VC*** in the zero-shot voice conversion scenario:
 
 - \textbf{YourTTS}: A TTS model with a speaker voiceprint model to extract speaker embedding and employ HiFi-GAN vocoder to reconstruct the waveform.
 The speaker embedding served as a condition of the flow-based decoder and posterior encoder for enhancing the zero-shot multi-speaker generation capability.
@@ -185,10 +185,10 @@ Additionally, Naturalness MOS and Speech Quality MOS assessments are conducted t
 
 As shown in Table~\ref{tab:mos}, the subjective evaluation results demonstrate the superior performance of our proposed approach in zero-shot voice conversion.
 YourTTS solely relies on global timbre representation to model speaker timbre, while SEF-VC utilizes only local timbre representation and the self-supervised model extracting semantic information exhibits residual timbre information, leading to poor timbre similarity.
-In addition, Diff-VC exhibits lower naturalness MOS than CoDiff-VC, suggesting that our content module extracts better content representations.
+In addition, Diff-VC exhibits lower naturalness MOS than ***CoDiff-VC***, suggesting that our content module extracts better content representations.
 Notably, these three models are constrained by a two-stage method, first reconstructing the mel and then restoring it through the vocoder, resulting in degradation of generation quality.
 Limited to coarse acoustic tokens, LM-VC faces challenges in restoring unseen speaker timbres.
-In contrast, CoDiff-VC modeling both coarse and fine-grained timbre, coupled with the application of dual CFG on the diffusion model, enhances the quality of converted speech while effectively capturing timbre information.
+In contrast, ***CoDiff-VC*** modeling both coarse and fine-grained timbre, coupled with the application of dual CFG on the diffusion model, enhances the quality of converted speech while effectively capturing timbre information.
 
 ### Objective Evaluation
 
@@ -196,9 +196,9 @@ To evaluate speaker similarity, we calculate the cosine similarity between the c
 For intelligibility evaluation, we calculate the Word Error Rate (WER) for the converted speech.
 The WER assessment is computed using an open-source Wenet toolkit~\cite{yao2021wenet} trained on the LibriSpeech dataset.
 
-As shown in Table~\ref{tab:mos}, the objective evaluation results align with the subjective evaluation, showing that CoDiff-VC achieved the highest cosine similarity.
-SEF-VC, LM-VC, and Diff-VC recorded higher WER scores than CoDiff-VC, suggesting that the discrete representation of content through timbre decoupling in Co-DiffVC facilitates more accurate modeling of content information.
-Meanwhile, the lower WER results indicate that our proposed CoDiff-VC's converted speech outperforms all baseline intelligibility systems.
+As shown in Table~\ref{tab:mos}, the objective evaluation results align with the subjective evaluation, showing that ***CoDiff-VC*** achieved the highest cosine similarity.
+SEF-VC, LM-VC, and Diff-VC recorded higher WER scores than ***CoDiff-VC***, suggesting that the discrete representation of content through timbre decoupling in Co-DiffVC facilitates more accurate modeling of content information.
+Meanwhile, the lower WER results indicate that our proposed ***CoDiff-VC***'s converted speech outperforms all baseline intelligibility systems.
 
 To demonstrate the effectiveness of timbre modeling, we visualize the coarse-grained timbre representations through t-SNE~\cite{Maaten2008VisualizingDU}.
 We select 100 audio samples from five random speakers in the test set and extract coarse-grained timbre representations for clustering using the model’s coarse-grained timbre modeling structure.
@@ -206,8 +206,8 @@ The clustering results, shown in Figure~\ref{fig:tsne}, indicate that the timbre
 
 ### Ablation Study
 
-To evaluate the effectiveness of each component in CoDiff-VC, we conduct an ablation study to analyze the impact of three key components: MSLN, multi-scale timbre modeling, and dual classifier-free guidance.
-We compare CoDiff-VC with three variants: first, without the MSLN module (-MSLN); second, using only coarse-grained speaker timbre instead of multi-scale ones (-fine-grained); and third, without dual classifier-free guidance (-dual cfg), utilizing only classifier-free guidance for content representation.
+To evaluate the effectiveness of each component in ***CoDiff-VC***, we conduct an ablation study to analyze the impact of three key components: MSLN, multi-scale timbre modeling, and dual classifier-free guidance.
+We compare ***CoDiff-VC*** with three variants: first, without the MSLN module (-MSLN); second, using only coarse-grained speaker timbre instead of multi-scale ones (-fine-grained); and third, without dual classifier-free guidance (-dual cfg), utilizing only classifier-free guidance for content representation.
 
 As illustrated in Table~\ref{tab:mos}, the speaker similarity and speech naturalness are significantly degraded when removing the MSLN module.
 These results suggest that the MSLN module is crucial for retaining content information while eliminating residual timbre information, playing an important role in disentangling linguistic content.
@@ -217,10 +217,10 @@ Furthermore, the model without dual classifier-free guidance exhibits lower spea
 
 ## 6·Conclusions: 结论
 
-In this paper, we propose CoDiff-VC, a codec-assisted end-to-end framework designed for zero-shot voice conversion.
+In this paper, we propose ***CoDiff-VC***, a codec-assisted end-to-end framework designed for zero-shot voice conversion.
 We employ a pre-trained codec and a pre-encoder to decouple discrete content representations from the source speech.
 Meanwhile, we introduce a multi-scale speaker timbre modeling module within the diffusion model for modeling fine-grained timbre details.
-Our proposed CoDiff-VC excels in generating converted audio for unseen target speakers with more similar voice characteristics, higher naturalness, and improved speech quality.
+Our proposed ***CoDiff-VC*** excels in generating converted audio for unseen target speakers with more similar voice characteristics, higher naturalness, and improved speech quality.
 Additionally, we present a dual classifier-free guidance method, creating implicit classifiers for content and speaker representations to enhance the inference results of the diffusion model.
 However, it's worth noting that the inference speed of diffusion remains relatively slow.
 We aim to address and improve the reverse process of diffusion in our future work.
