--- a/Models/SpeechLM/2025.01.23_OSUM.md
+++ b/Models/SpeechLM/2025.01.23_OSUM.md
@@ -6,26 +6,26 @@
 - 标题: "OSUM: Advancing Open Speech Understanding Models with Limited Resources in Academia"
 - 作者:
   - 01 Xuelong Geng
-  - 02 Kun Wei 魏坤
-  - 03 Qijie Shao 邵琪杰
-  - 04 Shuiyun Liu 刘水云
+  - 02 Kun Wei
+  - 03 Qijie Shao
+  - 04 Shuiyun Liu
   - 05 Zhennan Lin
   - 06 Zhixian Zhao
   - 07 Guojian Li
   - 08 Wenjie Tian
-  - 09 Peikun Chen 陈培坤
-  - 10 Yangze Li 李泱泽
-  - 11 Pengcheng Guo 郭鹏程
+  - 09 Peikun Chen
+  - 10 Yangze Li
+  - 11 Pengcheng Guo
   - 12 Mingchen Shao
   - 13 Shuiyuan Wang
   - 14 Yuang Cao
   - 15 Chengyou Wang
-  - 16 Tianyi Xu 徐天翼
+  - 16 Tianyi Xu
   - 17 Yuhang Dai
-  - 18 Xinfa Zhu 朱新发
-  - 19 Yue Li 李越
+  - 18 Xinfa Zhu
+  - 19 Yue Li
   - 20 Li Zhang
-  - 21 Lei Xie 谢磊
+  - 21 Lei Xie
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2501.13306)
   - [Publication]()
