--- a/Models/SpeechRepresentation/2021.06.14_HuBERT.md
+++ b/Models/SpeechRepresentation/2021.06.14_HuBERT.md
@@ -56,19 +56,66 @@ OpenSource: https://github.com/pytorch/fairseq/tree/master/examples/hubert
 
 ## 1·Introduction: 引言
 
+The north star for many research programs has been learning speech and audio representations through listening and interaction, similar to how babies learn their first language.
+High fidelity speech representation includes disentangled aspects of the spoken content along with non-lexical information of how it is delivered, e.g., speaker identity, emotion, hesitation, interruptions.
+Furthermore, reaching a complete situational understanding requires modeling structured noise interleaving and overlapping with the speech signal, e.g., laughter, coughing, lip-smacking, background vehicle engine, birds chirping, or food sizzling sounds.
+
+The need for such high-fidelity representations drove research in self-supervised learning for speech and audio where the targets driving the learning process of a designed pretext task are drawn from the input signal itself.
+Examples of pretext tasks for self-supervised speech representation learning include distinguishing near-by features from temporally distant ones \cite{oord2018representation,schneider2019wav2vec,kharitonov2020data}, next-step prediction of audio features \cite{chung2019unsupervised}, masked prediction of audio features given unmasked context \cite{baevski2019vq,baevski2020wav2vec}.
+Besides, self-supervised learning methods do not rely on any linguistic resources during training, allowing them to learn universal representations since labels, annotations, and text-only material ignores rich information in the input signal.
+
+Learning speech representations without reliance on large volumes of labeled data is crucial for industrial applications and products with ever-increasing coverage of new languages and domains.
+The time needed to collect large labeled datasets covering each of these scenarios is the real bottleneck in the current fast-moving AI industry, with time-to-market playing a critical role for product success.
+Building more inclusive applications covering spoken-only dialects and languages is another significant benefit of reducing dependence on linguistic resources.
+Given their non-standard orthographic rules, many of these languages and dialects have very little or no resources at all.
+
+Pseudo-labeling (PL), also known as self-training and belongs to the family of semi-supervised learning techniques, has been the dominant approach for utilizing unlabeled speech and audio with successful applications dating back to the mid-1990s \cite{Zavaliagkos_98, ma_bbn_06, kahn2020self, hsu2020semi}.
+PL starts with some supervised data to train a "teacher" model in one specific downstream task.
+Pseudo-labels are then generated for the unlabeled data using the teacher model.
+Next, a student model is trained using the combined supervised and teacher-labeled data either using the standard cross-entropy \cite{kahn2020self} loss or using a contrastive loss \cite{xiao2021contrastive} to account for noise in teacher-generated labels.
+The pseudo-labeling process may be repeated multiple times to improve teacher label quality \cite{xu2020iterative} iteratively.
+
+Without discounting the immense success of pseudo-labeling techniques, self-supervised representations offer two unique advantages: (1) Pseudo-label methods force student models to merely mimic a teacher model, which is limited by its supervised data size and the provided annotation quality.
+On the other hand, self-supervised pretext tasks force the model to represent the entire input signal by compressing much more bits of information into the learned latent representation.
+(2) In pseudo-labeling, the supervised data of the teacher model forces the whole learning to be geared towards a single downstream task.
+On the contrary, self-supervised features show better generalization to a multitude of downstream applications.
+
+There have been impressive successes for self-supervised learning in Computer Vision (CV) \cite{caron2020Swav, Chen2020SimSiam, grill2020byol} and Natural Language Processing (NLP) \cite{brown2020gpt3, liu2019roberta, lewis2019bart} applications.
+Learning representations of discrete input sequences, such as in Natural Language Processing (NLP) applications, uses either masked prediction \cite{devlin2018bert, clark2020electra} or auto-regressive generation \cite{peters2018deep, lewis2019bart} of input sequences with partial obfuscation.
+For continuous inputs, such as in Computer Vision (CV) applications, representations are often learned through instance classification, in which each image and its augmentations are treated as a single output class to be pulled together \cite{Chen2020SimSiam, grill2020byol} or contrasted against other negative samples \cite{he2020momentum}.
+
+Speech signals differ from text and images in that they are \textit{continuous-valued} \textit{sequences}.
+Self-supervised learning for the speech recognition domain faces unique challenges from those in CV and NLP.
+Firstly, the presence of multiple sounds in each input utterance breaks the instance classification assumption used in many CV pre-training approaches.
+Secondly, during pre-training, there is no prior lexicon of discrete sound units available, as in NLP applications in which words or word pieces are used, hindering the use of predictive losses.
+Lastly, the boundaries between sound units are not known, which complicates masked prediction pre-training.
+
+In this paper, we introduce \textbf{H}idden \textbf{u}nit \textbf{BERT} (HuBERT) that benefits from an offline clustering step to generate noisy labels for a BERT-like per-training.
+Concretely, a BERT model consumes masked continuous speech features to predict pre-determined cluster assignments.
+The predictive loss is only applied over the masked regions, forcing the model to learn good high-level representations of unmasked inputs to infer the targets of masked ones correctly.
+Intuitively, the HuBERT model is forced to learn both acoustic and language models from continuous inputs.
+First, the model needs to model unmasked inputs into meaningful continuous latent representations, which maps to the classical acoustic modeling problem.
+Second, to reduce the prediction error, the model needs to capture the long-range temporal relations between learned representations.
+One crucial insight motivating this work is the importance of consistency of the targets, not just their correctness, which enables the model to focus on modeling the sequential structure of input data.
+Our approach draws inspiration from the DeepCluster method for self-supervised visual learning \cite{caron2018deep}; however, HuBERT benefits from the masked prediction loss over speech sequences to represent their sequential structure.
+
+When the HuBERT model is pre-trained on either the standard Librispeech 960h \cite{panayotov2015librispeech} or the Libri-Light 60k hours \cite{kahn2020libri}, it either matches or improves upon the state-of-the-art wav2vec 2.0 \cite{baevski2020wav2vec} performance on all fine-tuning subsets of 10mins, 1h, 10h, 100h, and 960h.
+We present systematic results on three model sizes pre-trained with HuBERT: \textsc{Base} (90M parameters), \textsc{Large} (300M), and \textsc{X-Large} (1B).
+The \textsc{X-Large} model shows up to 19\% and 13\% relative WER improvement from \textsc{Large} models on dev-other and test-other evaluation subsets when pre-trained on the Libri-Light 60k hours.
+
 ## 2·Related Works: 相关工作
 
 ## 3·Methodology: 方法
 
-### 3.1·Learning the Hidden Units for HuBERT
+### Learning the Hidden Units for HuBERT
 
-### 3.2·Representation Learning via Masked Prediction
+### Representation Learning via Masked Prediction
 
-### 3.3·Learning with Cluster Ensembles
+### Learning with Cluster Ensembles
 
-### 3.4·Iterative Refinement of Cluster Assignments
+### Iterative Refinement of Cluster Assignments
 
-### 3.5·Implementation
+### Implementation
 
 ## 4·Experiments: 实验
 
